@@ -15,6 +15,7 @@
 11. Use current player when calling custom action from main menu.
 12. Allow specifying toolbar title for iframe custom actions.
 13. Map MusicMagic and SugarCube icons.
+14. Better integration of 'MusicIP Mood Mix'
 
 1.8.1
 -----
